# simple-gpt2

./: README.md  setup.cfg
.github/workflows/: python-publish.yml
src/simple-gpt2/: __init__.py  text_generator.py
