[metadata]
# replace with your username:
name = simple-gpt2
version = 1.0.0
author = Andrew Jivoin
author_email = andrew+py@jivoin.com
description = Wrapper of the DeepAI GPT-2 text generation API.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/ajivoin/simple-gpt2
project_urls =
    Bug Tracker = https://github.com/ajivoin/simple-gpt2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
